crates/reap-polymarket-adapter/tests/ui/private_read_roles_have_no_mutation.stderr
error[E0599]: no method named `place` found for struct `PmFixturePrivateLifecycle` in the current scope
  --> tests/ui/private_read_roles_have_no_mutation.rs:10:13
   |
10 |     private.place();
   |             ^^^^^ method not found in `PmFixturePrivateLifecycle`

error[E0599]: no method named `cancel_owned` found for struct `PmFixtureReconciliation` in the current scope
  --> tests/ui/private_read_roles_have_no_mutation.rs:11:20
   |
11 |     reconciliation.cancel_owned();
   |                    ^^^^^^^^^^^^
   |
help: there is a method `to_owned` with a similar name
   |
11 -     reconciliation.cancel_owned();
11 +     reconciliation.to_owned();
   |

error[E0599]: no method named `execution` found for struct `PmFixtureAccountPositionSnapshot` in the current scope
  --> tests/ui/private_read_roles_have_no_mutation.rs:12:13
   |
12 |     account.execution();
   |             ^^^^^^^^^ method not found in `PmFixtureAccountPositionSnapshot`
